src/style.css
@font-face{font-family:senbold;src:url(./fonts/sen-bold-webfont.woff2) format('woff2'),url(./fonts/sen-bold-webfont.woff) format('woff');font-weight:400;font-style:normal}
@font-face{font-family:senextrabold;src:url(./fonts/sen-extrabold-webfont.woff2) format('woff2'),url(./fonts/sen-extrabold-webfont.woff) format('woff');font-weight:400;font-style:normal}
@font-face{font-family:senregular;src:url(./fonts/sen-regular-webfont.woff2) format('woff2'),url(./fonts/sen-regular-webfont.woff) format('woff');font-weight:400;font-style:normal}

body{font-family: senregular; margin: 0;}
main{width: 100vw; height: 100vh;background-image: url(./img/bg-connexion.png);display: flex; flex-direction: column; justify-content: center; align-items: center; background-position: top center; background-repeat: no-repeat; background-size: contain;}
section{display: flex; flex-direction: column; justify-content: center; align-items: center; }
.logo{margin-bottom: 20px;}
.slogan{margin-bottom: 35px; font-size: 20px; text-align: center;}
.slogan strong{color: #18CFAE;}
.slogan em{font-size: 12px;}
label{display: flex;position: relative;margin: 15px 0; height: 55px; background-color: white;border: 1px solid #F7F7F7; box-sizing: border-box; box-shadow: 0px 4px 42px rgba(0, 0, 0, 0.1);border-radius: 5px; width: 325px;}
label p{display: flex;position: absolute; left: 58px; pointer-events: none; color: #18CFAE; transition: 350ms ease;}
label img{padding: 0 18px;}
label input{width: -webkit-fill-available; outline: none; border: none;border-radius: 5px; font-size: 18px;}
label input.active + p{transform: translateY(-34px); font-size: 13px; transform-origin: left top;}
label img.show-mp{position: absolute; right: 15px; top: 15px; transition: 100ms ease; opacity: 0; cursor: pointer; padding: 10px;}
label img.show-mp.active{opacity: 1;}
label img#show-mp-1{top: 11px;}
button{margin: 15px 0; height: 55px;border-radius: 5px; border:none; background-color: #18CFAE;width: 325px;color: white;font-size: 15px; outline: none; cursor: pointer;transition: 350ms ease;}
button:hover{background-color:#15AA8F;}
footer{position: fixed;bottom: 50px; left: 0; text-align: center; width: 100%; font-size: 13px; opacity: 0.7}

.inscription{display: none;}

